# Dahls

./: .gitignore  Dahls.cabal  LICENSE  planning.txt
.stack-work/install/29d018e7/flag-cache/: StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  adjunctions-4.3-73ecd3426d65e66f06cdfa3b84495afe  base-orphans-0.5.4-20714e0f347c45e6d29f170ca5da573b  bifunctors-5.2-3cac53b044d783f364414d16fdcf0133  comonad-4.2.7.2-35596a25d7d26c0778ea0ef13ffcdde2  contravariant-1.4-d2debf6b8a44f8a80abd5d39c65e817d  distributive-0.5.0.2-960666f31e0d75e3ef250b911556ce1b  exceptions-0.8.3-8f7975cd233e92b462cd0e5cf53634df  free-4.12.4-72fb8e62bb27b6b139ae71c2ab1c7ca4  hashable-1.2.4.0-de0d0ea7cf574ec19eea73fc2069e997  kan-extensions-4.2.3-f893599ea3c331503ac3131136243ef5  lens-4.13-8b6e22d791c189da3d3aeac9aa606f0a  mtl-2.2.1-b85491d29485f54f395006786223e6a0  parallel-3.2.1.0-9351a1e20d76de907cc94d128f3098cc  prelude-extras-0.4.0.3-6e9a097263de53c20fe446ce38ca5ff0  primitive-0.6.1.0-8241719e3ebf8c7f0c5a630b89f992cd  profunctors-5.2-b16863dbf03e91dcde510085ab6fb8d3  reflection-2.1.2-a1800076486d650159694cb5f635481f  semigroupoids-5.0.1-9473759a7dcb348334b96a913930a259  semigroups-0.18.1-915b2b51a3c1825358d8b4463ff969a6  stm-2.4.4.1-9a35ee1e97a2828cc9aee050791a5ab7  tagged-0.8.4-0bfe94e45ff971eba7dc24d3bed07b2b  text-1.2.2.1-a8790720b026d1fe28baa6e14c0f00e3  transformers-compat-0.4.0.4-8aa4073730c676dbe210ea8bffd8d092  unordered-containers-0.2.7.1-d5a51d997f65d479a8e11e06b7ad9db3  vector-0.11.0.0-2ce50bc0eff5c877562e8cc16c8366f6  void-0.7.1-2de3b7ab44b3e20798f39b12f1c64f9b
app/: Grammar.hs  GrammarHelpers.hs  Main.hs  Mechanics.hs  Process.hs
test/: Main.hs  MockGrammar.hs  TestGrammar.hs  TestMechanics.hs  TestRels.hs
(+1 files in other folders)
