name:                Dahls
version:             0.1.0.0
synopsis:            Simulation of critters
description:         Please see README.md
homepage:            https://github.com/lambdanaut/Dahls
license:             Apache
license-file:        LICENSE
author:              Joshua S Thomas
maintainer:          personettelabs@gmail.com
copyright:           2016 Joshua S Thomas
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      app
  exposed-modules:     Main, Grammar, GrammarHelpers, Mechanics, Process
  build-depends:       base >= 4.7 && < 5
                     , lens == 4.13
                     , mtl == 2.2.1
                     , random == 1.1
                     , uuid == 1.3.12
  default-language:    Haskell2010

--executable Dahls-exe
--  hs-source-dirs:      app
--  main-is:             Main.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , lens == 4.13
--  default-language:    Haskell2010

test-suite Dahls-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , Dahls
                     , hspec == 2.2.3
                     , HUnit == 1.3.1.2
                     , lens == 4.13
                     , mtl == 2.2.1
                     , uuid == 1.3.12
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambdanaut/Dahls
